src/objects/Test_Steps__c.object
<CustomObject>
    <description>Regarding test cases step by step</description>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <label>Actual Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Regarding Test cases steps</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Precondition__c</fullName>
        <label>Precondition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <description>Regarding test case</description>
        <label>Test Case</label>
        <referenceTo>agf__QA_Test_Case__c</referenceTo>
        <relationshipLabel>Test Steps</relationshipLabel>
        <relationshipName>Test_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <label>Test Data</label>
        <type>TextArea</type>
    </fields>
    <label>Test Steps</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Case Step Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>